--- a/qt/domanic_dialog.ui
+++ b/qt/domanic_dialog.ui
@@ -520,93 +520,6 @@ selection-color: rgb(85, 0, 0);</string>
                     <layout class="QGridLayout" name="gridLayout_46">
                      <item row="2" column="0">
                       <layout class="QGridLayout" name="gridLayout_47">
-                       <item row="0" column="0">
-                        <widget class="QComboBox" name="comboBox_color_tablet">
-                         <property name="font">
-                          <font>
-                           <pointsize>8</pointsize>
-                          </font>
-                         </property>
-                         <property name="toolTip">
-                          <string>цвет кривой</string>
-                         </property>
-                         <item>
-                          <property name="text">
-                           <string>red</string>
-                          </property>
-                         </item>
-                         <item>
-                          <property name="text">
-                           <string>darkRed</string>
-                          </property>
-                         </item>
-                         <item>
-                          <property name="text">
-                           <string>blue</string>
-                          </property>
-                         </item>
-                         <item>
-                          <property name="text">
-                           <string>darkBlue</string>
-                          </property>
-                         </item>
-                         <item>
-                          <property name="text">
-                           <string>green</string>
-                          </property>
-                         </item>
-                         <item>
-                          <property name="text">
-                           <string>darkGreen</string>
-                          </property>
-                         </item>
-                         <item>
-                          <property name="text">
-                           <string>cyan</string>
-                          </property>
-                         </item>
-                         <item>
-                          <property name="text">
-                           <string>darkCyan</string>
-                          </property>
-                         </item>
-                         <item>
-                          <property name="text">
-                           <string>magenta</string>
-                          </property>
-                         </item>
-                         <item>
-                          <property name="text">
-                           <string>darkMagenta</string>
-                          </property>
-                         </item>
-                         <item>
-                          <property name="text">
-                           <string>yellow</string>
-                          </property>
-                         </item>
-                         <item>
-                          <property name="text">
-                           <string>black</string>
-                          </property>
-                         </item>
-                         <item>
-                          <property name="text">
-                           <string>darkGray</string>
-                          </property>
-                         </item>
-                         <item>
-                          <property name="text">
-                           <string>gray</string>
-                          </property>
-                         </item>
-                         <item>
-                          <property name="text">
-                           <string>lightGray</string>
-                          </property>
-                         </item>
-                        </widget>
-                       </item>
                        <item row="0" column="1">
                         <widget class="QComboBox" name="comboBox_dash_tablet">
                          <property name="font">
@@ -635,6 +548,20 @@ selection-color: rgb(85, 0, 0);</string>
                          <item>
                           <property name="text">
                            <string>-.-.-.-.-.-.-.-.</string>
+                          </property>
+                         </item>
+                        </widget>
+                       </item>
+                       <item row="0" column="3">
+                        <widget class="QComboBox" name="comboBox_type_graph">
+                         <item>
+                          <property name="text">
+                           <string>bar</string>
+                          </property>
+                         </item>
+                         <item>
+                          <property name="text">
+                           <string>stem</string>
                           </property>
                          </item>
                         </widget>
@@ -681,18 +608,11 @@ selection-color: rgb(85, 0, 0);</string>
                          </item>
                         </widget>
                        </item>
-                       <item row="0" column="3">
-                        <widget class="QComboBox" name="comboBox_type_graph">
-                         <item>
-                          <property name="text">
-                           <string>bar</string>
-                          </property>
-                         </item>
-                         <item>
-                          <property name="text">
-                           <string>stem</string>
-                          </property>
-                         </item>
+                       <item row="0" column="0">
+                        <widget class="QPushButton" name="pushButton_color_tablet">
+                         <property name="text">
+                          <string>color</string>
+                         </property>
                         </widget>
                        </item>
                       </layout>
@@ -875,90 +795,13 @@ selection-color: rgb(85, 0, 0);</string>
                    <item row="2" column="0">
                     <layout class="QGridLayout" name="gridLayout_28">
                      <item row="0" column="0">
-                      <widget class="QComboBox" name="comboBox_color">
-                       <property name="font">
-                        <font>
-                         <pointsize>8</pointsize>
-                        </font>
+                      <widget class="QPushButton" name="pushButton_rel_color">
+                       <property name="styleSheet">
+                        <string notr="true">background-color: rgb(85, 85, 255);</string>
                        </property>
-                       <property name="toolTip">
-                        <string>цвет кривой</string>
+                       <property name="text">
+                        <string>color</string>
                        </property>
-                       <item>
-                        <property name="text">
-                         <string>red</string>
-                        </property>
-                       </item>
-                       <item>
-                        <property name="text">
-                         <string>darkRed</string>
-                        </property>
-                       </item>
-                       <item>
-                        <property name="text">
-                         <string>blue</string>
-                        </property>
-                       </item>
-                       <item>
-                        <property name="text">
-                         <string>darkBlue</string>
-                        </property>
-                       </item>
-                       <item>
-                        <property name="text">
-                         <string>green</string>
-                        </property>
-                       </item>
-                       <item>
-                        <property name="text">
-                         <string>darkGreen</string>
-                        </property>
-                       </item>
-                       <item>
-                        <property name="text">
-                         <string>cyan</string>
-                        </property>
-                       </item>
-                       <item>
-                        <property name="text">
-                         <string>darkCyan</string>
-                        </property>
-                       </item>
-                       <item>
-                        <property name="text">
-                         <string>magenta</string>
-                        </property>
-                       </item>
-                       <item>
-                        <property name="text">
-                         <string>darkMagenta</string>
-                        </property>
-                       </item>
-                       <item>
-                        <property name="text">
-                         <string>yellow</string>
-                        </property>
-                       </item>
-                       <item>
-                        <property name="text">
-                         <string>black</string>
-                        </property>
-                       </item>
-                       <item>
-                        <property name="text">
-                         <string>darkGray</string>
-                        </property>
-                       </item>
-                       <item>
-                        <property name="text">
-                         <string>gray</string>
-                        </property>
-                       </item>
-                       <item>
-                        <property name="text">
-                         <string>lightGray</string>
-                        </property>
-                       </item>
                       </widget>
                      </item>
                      <item row="0" column="1">
@@ -2503,6 +2346,108 @@ selection-color: rgb(85, 0, 0);</string>
                  </item>
                 </layout>
                </widget>
+               <widget class="QWidget" name="tab_5">
+                <attribute name="title">
+                 <string>5</string>
+                </attribute>
+                <layout class="QGridLayout" name="gridLayout_56">
+                 <item row="1" column="1">
+                  <layout class="QGridLayout" name="gridLayout_54" rowstretch="2,3">
+                   <item row="0" column="0">
+                    <layout class="QGridLayout" name="gridLayout_55">
+                     <item row="3" column="2">
+                      <widget class="QPushButton" name="pushButton_del_user_int">
+                       <property name="styleSheet">
+                        <string notr="true">background-color: rgb(255, 185, 185);</string>
+                       </property>
+                       <property name="text">
+                        <string>DEL</string>
+                       </property>
+                      </widget>
+                     </item>
+                     <item row="1" column="0" colspan="3">
+                      <widget class="QListWidget" name="listWidget_user_int"/>
+                     </item>
+                     <item row="2" column="0">
+                      <widget class="QCheckBox" name="checkBox_choose_all_user_int">
+                       <property name="text">
+                        <string>choose all</string>
+                       </property>
+                      </widget>
+                     </item>
+                     <item row="0" column="0" colspan="3">
+                      <widget class="QLabel" name="label_param_4">
+                       <property name="font">
+                        <font>
+                         <pointsize>11</pointsize>
+                         <italic>true</italic>
+                         <underline>true</underline>
+                        </font>
+                       </property>
+                       <property name="text">
+                        <string>Пользовательские интервалы:</string>
+                       </property>
+                      </widget>
+                     </item>
+                     <item row="3" column="1">
+                      <widget class="QPushButton" name="pushButton_edit_user_int">
+                       <property name="styleSheet">
+                        <string notr="true">background-color: rgb(255, 255, 222);</string>
+                       </property>
+                       <property name="text">
+                        <string>EDIT</string>
+                       </property>
+                      </widget>
+                     </item>
+                     <item row="2" column="2">
+                      <widget class="QPushButton" name="pushButton_add_from_cat_user_int">
+                       <property name="styleSheet">
+                        <string notr="true">background-color: rgb(191, 255, 191);</string>
+                       </property>
+                       <property name="text">
+                        <string>ADD CAT</string>
+                       </property>
+                      </widget>
+                     </item>
+                     <item row="2" column="1">
+                      <widget class="QPushButton" name="pushButton_add_user_int">
+                       <property name="styleSheet">
+                        <string notr="true">background-color: rgb(191, 255, 191);</string>
+                       </property>
+                       <property name="text">
+                        <string>ADD</string>
+                       </property>
+                      </widget>
+                     </item>
+                     <item row="3" column="0">
+                      <widget class="QPushButton" name="pushButton_to_work_user_int">
+                       <property name="styleSheet">
+                        <string notr="true">background-color: rgb(165, 236, 255);</string>
+                       </property>
+                       <property name="text">
+                        <string>TO WORK</string>
+                       </property>
+                      </widget>
+                     </item>
+                    </layout>
+                   </item>
+                   <item row="1" column="0">
+                    <spacer name="verticalSpacer">
+                     <property name="orientation">
+                      <enum>Qt::Vertical</enum>
+                     </property>
+                     <property name="sizeHint" stdset="0">
+                      <size>
+                       <width>20</width>
+                       <height>40</height>
+                      </size>
+                     </property>
+                    </spacer>
+                   </item>
+                  </layout>
+                 </item>
+                </layout>
+               </widget>
               </widget>
              </item>
             </layout>
@@ -3511,7 +3456,7 @@ selection-color: rgb(85, 0, 0);</string>
        </layout>
       </item>
       <item row="0" column="0">
-       <layout class="QGridLayout" name="gridLayout_25" columnstretch="1,1,3,1">
+       <layout class="QGridLayout" name="gridLayout_25" columnstretch="0,0,4,0,1">
         <item row="0" column="0">
          <widget class="QLabel" name="label_9">
           <property name="font">
@@ -3587,17 +3532,14 @@ selection-color: rgb(85, 0, 0);</string>
          </widget>
         </item>
         <item row="0" column="3">
-         <spacer name="horizontalSpacer">
-          <property name="orientation">
-           <enum>Qt::Horizontal</enum>
+         <widget class="QPushButton" name="pushButton_color">
+          <property name="text">
+           <string>color</string>
           </property>
-          <property name="sizeHint" stdset="0">
-           <size>
-            <width>40</width>
-            <height>20</height>
-           </size>
-          </property>
-         </spacer>
+         </widget>
+        </item>
+        <item row="0" column="4">
+         <widget class="QLineEdit" name="lineEdit_string"/>
         </item>
        </layout>
       </item>
