--- a/qt/domanic_dialog.ui
+++ b/qt/domanic_dialog.ui
@@ -3061,24 +3061,6 @@ selection-color: rgb(85, 0, 0);</string>
                  </property>
                 </widget>
                </item>
-               <item row="1" column="1">
-                <widget class="QPushButton" name="pushButton_pir_extr">
-                 <property name="font">
-                  <font>
-                   <pointsize>9</pointsize>
-                  </font>
-                 </property>
-                 <property name="toolTip">
-                  <string>Загрузка данных пиролиза керна после экстракции</string>
-                 </property>
-                 <property name="styleSheet">
-                  <string notr="true">background-color: rgb(191, 255, 191);</string>
-                 </property>
-                 <property name="text">
-                  <string>+ PIR EXTR</string>
-                 </property>
-                </widget>
-               </item>
                <item row="2" column="1">
                 <widget class="QPushButton" name="pushButton_chrom_extr">
                  <property name="font">
@@ -3097,21 +3079,21 @@ selection-color: rgb(85, 0, 0);</string>
                  </property>
                 </widget>
                </item>
-               <item row="3" column="0">
-                <widget class="QPushButton" name="pushButton_las">
+               <item row="1" column="1">
+                <widget class="QPushButton" name="pushButton_pir_extr">
                  <property name="font">
                   <font>
                    <pointsize>9</pointsize>
                   </font>
                  </property>
                  <property name="toolTip">
-                  <string>Загрузка LAS-файлов</string>
+                  <string>Загрузка данных пиролиза керна после экстракции</string>
                  </property>
                  <property name="styleSheet">
                   <string notr="true">background-color: rgb(191, 255, 191);</string>
                  </property>
                  <property name="text">
-                  <string>+ LAS</string>
+                  <string>+ PIR EXTR</string>
                  </property>
                 </widget>
                </item>
@@ -3133,6 +3115,24 @@ selection-color: rgb(85, 0, 0);</string>
                  </property>
                 </widget>
                </item>
+               <item row="3" column="0">
+                <widget class="QPushButton" name="pushButton_las">
+                 <property name="font">
+                  <font>
+                   <pointsize>9</pointsize>
+                  </font>
+                 </property>
+                 <property name="toolTip">
+                  <string>Загрузка LAS-файлов</string>
+                 </property>
+                 <property name="styleSheet">
+                  <string notr="true">background-color: rgb(191, 255, 191);</string>
+                 </property>
+                 <property name="text">
+                  <string>+ LAS</string>
+                 </property>
+                </widget>
+               </item>
                <item row="5" column="1">
                 <widget class="QPushButton" name="pushButton_del_param_2">
                  <property name="font">
@@ -3142,24 +3142,6 @@ selection-color: rgb(85, 0, 0);</string>
                  </property>
                  <property name="text">
                   <string/>
-                 </property>
-                </widget>
-               </item>
-               <item row="3" column="1">
-                <widget class="QPushButton" name="pushButton_lit">
-                 <property name="font">
-                  <font>
-                   <pointsize>9</pointsize>
-                  </font>
-                 </property>
-                 <property name="toolTip">
-                  <string>Загрузка данных литологии</string>
-                 </property>
-                 <property name="styleSheet">
-                  <string notr="true">background-color: rgb(191, 255, 191);</string>
-                 </property>
-                 <property name="text">
-                  <string>+ LIT</string>
                  </property>
                 </widget>
                </item>
@@ -3182,14 +3164,35 @@ selection-color: rgb(85, 0, 0);</string>
                 </widget>
                </item>
                <item row="4" column="1">
-                <widget class="QPushButton" name="pushButton_del_param_3">
+                <widget class="QPushButton" name="pushButton_add_age">
                  <property name="font">
                   <font>
                    <pointsize>10</pointsize>
                   </font>
                  </property>
+                 <property name="styleSheet">
+                  <string notr="true">background-color: rgb(191, 255, 191);</string>
+                 </property>
                  <property name="text">
-                  <string/>
+                  <string>+ AGE</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="3" column="1">
+                <widget class="QPushButton" name="pushButton_lit">
+                 <property name="font">
+                  <font>
+                   <pointsize>9</pointsize>
+                  </font>
+                 </property>
+                 <property name="toolTip">
+                  <string>Загрузка данных литологии</string>
+                 </property>
+                 <property name="styleSheet">
+                  <string notr="true">background-color: rgb(191, 255, 191);</string>
+                 </property>
+                 <property name="text">
+                  <string>+ LIT</string>
                  </property>
                 </widget>
                </item>
@@ -3362,7 +3365,7 @@ selection-color: rgb(85, 0, 0);</string>
                     <rect>
                      <x>0</x>
                      <y>0</y>
-                     <width>91</width>
+                     <width>98</width>
                      <height>91</height>
                     </rect>
                    </property>
@@ -3456,7 +3459,7 @@ selection-color: rgb(85, 0, 0);</string>
        </layout>
       </item>
       <item row="0" column="0">
-       <layout class="QGridLayout" name="gridLayout_25" columnstretch="0,0,4,0,1">
+       <layout class="QGridLayout" name="gridLayout_25" columnstretch="0,0,0,4,0,1">
         <item row="0" column="0">
          <widget class="QLabel" name="label_9">
           <property name="font">
@@ -3471,7 +3474,7 @@ selection-color: rgb(85, 0, 0);</string>
           </property>
          </widget>
         </item>
-        <item row="0" column="1">
+        <item row="0" column="2">
          <layout class="QGridLayout" name="gridLayout_24" columnstretch="3,0,3">
           <item row="0" column="0">
            <widget class="QDoubleSpinBox" name="doubleSpinBox_start">
@@ -3524,22 +3527,32 @@ selection-color: rgb(85, 0, 0);</string>
           </item>
          </layout>
         </item>
-        <item row="0" column="2">
+        <item row="0" column="3">
          <widget class="QLabel" name="label_int">
           <property name="text">
            <string>Выбраны интервалы:</string>
           </property>
          </widget>
         </item>
-        <item row="0" column="3">
+        <item row="0" column="4">
          <widget class="QPushButton" name="pushButton_color">
           <property name="text">
            <string>color</string>
           </property>
          </widget>
         </item>
-        <item row="0" column="4">
+        <item row="0" column="5">
          <widget class="QLineEdit" name="lineEdit_string"/>
+        </item>
+        <item row="0" column="1">
+         <widget class="QToolButton" name="toolButton_int_reset">
+          <property name="styleSheet">
+           <string notr="true">background-color: rgb(255, 255, 222);</string>
+          </property>
+          <property name="text">
+           <string>reset</string>
+          </property>
+         </widget>
         </item>
        </layout>
       </item>
