--- a/qt/domanic_dialog.ui
+++ b/qt/domanic_dialog.ui
@@ -2352,7 +2352,7 @@ selection-color: rgb(85, 0, 0);</string>
                 </attribute>
                 <layout class="QGridLayout" name="gridLayout_56">
                  <item row="1" column="1">
-                  <layout class="QGridLayout" name="gridLayout_54" rowstretch="2,3">
+                  <layout class="QGridLayout" name="gridLayout_54" rowstretch="0,0">
                    <item row="0" column="0">
                     <layout class="QGridLayout" name="gridLayout_55">
                      <item row="3" column="2">
@@ -2432,17 +2432,178 @@ selection-color: rgb(85, 0, 0);</string>
                     </layout>
                    </item>
                    <item row="1" column="0">
-                    <spacer name="verticalSpacer">
-                     <property name="orientation">
-                      <enum>Qt::Vertical</enum>
-                     </property>
-                     <property name="sizeHint" stdset="0">
-                      <size>
-                       <width>20</width>
-                       <height>40</height>
-                      </size>
-                     </property>
-                    </spacer>
+                    <layout class="QGridLayout" name="gridLayout_57">
+                     <item row="0" column="0">
+                      <widget class="QLabel" name="label_10">
+                       <property name="font">
+                        <font>
+                         <pointsize>11</pointsize>
+                         <italic>true</italic>
+                         <underline>true</underline>
+                        </font>
+                       </property>
+                       <property name="text">
+                        <string>Сравнение интервалов:</string>
+                       </property>
+                      </widget>
+                     </item>
+                     <item row="1" column="0">
+                      <layout class="QGridLayout" name="gridLayout_58" columnstretch="3,1">
+                       <item row="0" column="0">
+                        <layout class="QGridLayout" name="gridLayout_59">
+                         <item row="0" column="0">
+                          <widget class="QLabel" name="label_2">
+                           <property name="font">
+                            <font>
+                             <pointsize>9</pointsize>
+                             <underline>true</underline>
+                            </font>
+                           </property>
+                           <property name="text">
+                            <string>Интервалы:</string>
+                           </property>
+                          </widget>
+                         </item>
+                         <item row="1" column="0">
+                          <layout class="QGridLayout" name="gridLayout_60">
+                           <item row="1" column="0">
+                            <widget class="QPushButton" name="pushButton_compare_add_int">
+                             <property name="styleSheet">
+                              <string notr="true">background-color: rgb(191, 255, 191);</string>
+                             </property>
+                             <property name="text">
+                              <string>ADD</string>
+                             </property>
+                            </widget>
+                           </item>
+                           <item row="0" column="0" colspan="2">
+                            <widget class="QListWidget" name="listWidget_compare_int"/>
+                           </item>
+                           <item row="2" column="0">
+                            <widget class="QPushButton" name="pushButton_compare_del_int">
+                             <property name="styleSheet">
+                              <string notr="true">background-color: rgb(255, 185, 185);</string>
+                             </property>
+                             <property name="text">
+                              <string>DEL</string>
+                             </property>
+                            </widget>
+                           </item>
+                           <item row="2" column="1">
+                            <widget class="QPushButton" name="pushButton_compare_clear_int">
+                             <property name="styleSheet">
+                              <string notr="true">background-color: rgb(255, 185, 185);</string>
+                             </property>
+                             <property name="text">
+                              <string>CLEAR</string>
+                             </property>
+                            </widget>
+                           </item>
+                          </layout>
+                         </item>
+                        </layout>
+                       </item>
+                       <item row="0" column="1">
+                        <layout class="QGridLayout" name="gridLayout_79">
+                         <item row="0" column="0">
+                          <widget class="QLabel" name="label_24">
+                           <property name="font">
+                            <font>
+                             <pointsize>9</pointsize>
+                             <underline>true</underline>
+                            </font>
+                           </property>
+                           <property name="text">
+                            <string>Параметры:</string>
+                           </property>
+                          </widget>
+                         </item>
+                         <item row="1" column="0">
+                          <layout class="QGridLayout" name="gridLayout_80">
+                           <item row="1" column="0">
+                            <widget class="QPushButton" name="pushButton_compare_add_param">
+                             <property name="styleSheet">
+                              <string notr="true">background-color: rgb(191, 255, 191);</string>
+                             </property>
+                             <property name="text">
+                              <string>ADD</string>
+                             </property>
+                            </widget>
+                           </item>
+                           <item row="0" column="0" colspan="2">
+                            <widget class="QListWidget" name="listWidget_compare_param"/>
+                           </item>
+                           <item row="2" column="1">
+                            <widget class="QPushButton" name="pushButton_compare_clear_param">
+                             <property name="styleSheet">
+                              <string notr="true">background-color: rgb(255, 185, 185);</string>
+                             </property>
+                             <property name="text">
+                              <string>CLEAR</string>
+                             </property>
+                            </widget>
+                           </item>
+                           <item row="2" column="0">
+                            <widget class="QPushButton" name="pushButton_compare_del_param">
+                             <property name="styleSheet">
+                              <string notr="true">background-color: rgb(255, 185, 185);</string>
+                             </property>
+                             <property name="text">
+                              <string>DEL</string>
+                             </property>
+                            </widget>
+                           </item>
+                          </layout>
+                         </item>
+                        </layout>
+                       </item>
+                      </layout>
+                     </item>
+                     <item row="2" column="0">
+                      <layout class="QGridLayout" name="gridLayout_81">
+                       <item row="0" column="0">
+                        <widget class="QPushButton" name="pushButton_compare_table">
+                         <property name="styleSheet">
+                          <string notr="true">background-color: rgb(255, 255, 222);</string>
+                         </property>
+                         <property name="text">
+                          <string>TABLE</string>
+                         </property>
+                        </widget>
+                       </item>
+                       <item row="0" column="1">
+                        <widget class="QPushButton" name="pushButton_compare_draw">
+                         <property name="styleSheet">
+                          <string notr="true">background-color: rgb(255, 255, 222);</string>
+                         </property>
+                         <property name="text">
+                          <string>DRAW</string>
+                         </property>
+                        </widget>
+                       </item>
+                       <item row="0" column="2">
+                        <widget class="QPushButton" name="pushButton_compare_matrix">
+                         <property name="styleSheet">
+                          <string notr="true">background-color: rgb(255, 255, 222);</string>
+                         </property>
+                         <property name="text">
+                          <string>MATRIX</string>
+                         </property>
+                        </widget>
+                       </item>
+                       <item row="0" column="3">
+                        <widget class="QPushButton" name="pushButton_compare_save">
+                         <property name="styleSheet">
+                          <string notr="true">background-color: rgb(165, 236, 255);</string>
+                         </property>
+                         <property name="text">
+                          <string>SAVE</string>
+                         </property>
+                        </widget>
+                       </item>
+                      </layout>
+                     </item>
+                    </layout>
                    </item>
                   </layout>
                  </item>
@@ -3365,7 +3526,7 @@ selection-color: rgb(85, 0, 0);</string>
                     <rect>
                      <x>0</x>
                      <y>0</y>
-                     <width>98</width>
+                     <width>91</width>
                      <height>91</height>
                     </rect>
                    </property>
