--- a/qt/domanic_dialog.ui
+++ b/qt/domanic_dialog.ui
@@ -548,6 +548,55 @@ selection-color: rgb(85, 0, 0);</string>
                            </property>
                           </widget>
                          </item>
+                         <item row="0" column="1">
+                          <layout class="QGridLayout" name="gridLayout_81">
+                           <item row="0" column="0">
+                            <widget class="QLabel" name="label_2">
+                             <property name="font">
+                              <font>
+                               <family>aakar</family>
+                              </font>
+                             </property>
+                             <property name="text">
+                              <string>Шаблоны:</string>
+                             </property>
+                            </widget>
+                           </item>
+                           <item row="1" column="0">
+                            <widget class="QComboBox" name="comboBox_temp_graph_tab"/>
+                           </item>
+                           <item row="2" column="0">
+                            <widget class="QPushButton" name="pushButton_add_temp_graph_tab">
+                             <property name="styleSheet">
+                              <string notr="true">background-color: rgb(191, 255, 191);</string>
+                             </property>
+                             <property name="text">
+                              <string>ADD TEMP</string>
+                             </property>
+                            </widget>
+                           </item>
+                           <item row="3" column="0">
+                            <widget class="QPushButton" name="pushButton_del_temp_graph_tab">
+                             <property name="styleSheet">
+                              <string notr="true">background-color: rgb(255, 185, 185);</string>
+                             </property>
+                             <property name="text">
+                              <string>DEL TEMP</string>
+                             </property>
+                            </widget>
+                           </item>
+                           <item row="4" column="0">
+                            <widget class="QPushButton" name="pushButton_use_temp_graph_tab">
+                             <property name="styleSheet">
+                              <string notr="true">background-color: rgb(255, 255, 222);</string>
+                             </property>
+                             <property name="text">
+                              <string>USE TEMP</string>
+                             </property>
+                            </widget>
+                           </item>
+                          </layout>
+                         </item>
                         </layout>
                        </item>
                        <item row="1" column="0">
